adguard-statefulset.yml
apiVersion: apps/v1 
kind: StatefulSet
metadata: 
  name: adguard-statefulset
  namespace: adguard
  labels: 
    app: adguard 
spec: 
  replicas: 1
  serviceName: "adguard"
  selector: 
    matchLabels: 
      app: adguard 
  template: 
    metadata:
      name: adguard
      labels:
        app: adguard
    spec:
      securityContext:
        runAsUser: 2000
        fsGroup: 2000
      containers:
      - name: adguard
        image: adguard/adguardhome 
        volumeMounts: 
        - name: adguard-data 
          mountPath: /opt/adguardhome/work 
        - name: adguard-config 
          mountPath: /opt/adguardhome/conf
      volumes: 
      - name: adguard-data 
        persistentVolumeClaim: 
          claimName: adguard-data 
      - name: adguard-config
        persistentVolumeClaim:
          claimName: adguard-config
