adguard-lb-udp.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-udp
  namespace: adguard
  labels:
    app: adguard
  annotations: 
    metallb.universe.tf/allow-shared-ip: "adguard"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.100.15.101
  externalTrafficPolicy: Local
  selector:
    app: adguard
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
