adguard-lb.yml
apiVersion: v1
kind: Service
metadata: 
  name: adguard 
  namespace: adguard
  labels: 
    app: adguard 
  annotations: 
    metallb.universe.tf/allow-shared-ip: "adguard" 
spec: 
  type: LoadBalancer
  loadBalancerIP: 10.100.15.101 
  selector: 
    app: adguard 
  ports: 
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP 
  - name: installer 
    port: 3000 
    targetPort: 3000 
    protocol: TCP
