adguard-srvc.yml
apiVersion: v1
kind: Service
metadata: 
  name: adguard-web-service
  namespace: adguard
  labels: 
    app: adguard 
spec: 
  selector: 
    app: adguard 
  ports: 
  - name: web-service
    port: 80 
    targetPort: 80 
  - name: install-web-service
    port: 3000
    targetPort: 3000
