adguard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: adguard-ingress
  namespace: adguard
  labels: 
    app: adguard 
spec:
  ingressClassName: nginx 
  tls: 
  - hosts:
    - adguard.gpastor.net
    secretName: gpastor-wildcard
  rules: 
  - host: adguard.gpastor.net
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: adguard-web-service 
            port: 
              number: 80
      - path: /install 
        pathType: Prefix 
        backend: 
          service: 
            name: adguard-web-service 
            port: 
              number: 3000
